force-app/main/default/objects/Question_Validation__c/Question_Validation__c.object-meta.xml
<CustomObject>
    <description>This object is created to put validation criteria with error message e.g. Policy Start Date must not be past date</description>
    <label>Question Validation</label>
    <nameField>
        <displayFormat>QV-{0000}</displayFormat>
        <label>Question Validation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Validation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>