force-app/main/default/objects/Question_Validation__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Put some description about this validation</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>